--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 :root {
-    font-family: 'Courier New', Courier, monospace;
-    --colour1: yellow;
-    --colourblue: blue;
+    font-family: Arial, Helvetica, sans-serif;
+    --colour1: #F28123;
+    --colourblue: #38726C;
+    --colourwords: #8e9aaf;
+    --colourOrange: #d34324;
+    --colourBG: #DCEED1;
 }
 
 body {
@@ -14,8 +17,8 @@ body {
 .container {
     margin: 0;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 4fr 2fr;
+    grid-template-rows: 1fr 2fr 2fr;
     grid-template-areas: 
     "nav header header"
     "nav projects rSide"
@@ -26,18 +29,29 @@ body {
 
 nav {
     grid-area: nav;
-    border: 2px solid black;
     display: grid;
     background-color: var(--colourblue);
+    grid-template-columns: 1fr;
+    grid-template-rows: 10% repeat(10, 7%);   
 }
 
 nav > div {
-    border: 2px solid black;
+    color: white;
+    padding: 0% 4%;
+    /* border: 2px solid white; */
+    font-size: 0.8rem;
+    justify-content: center; 
+    align-content: center;
 }
+
+#dashboard {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
 
 header {
     grid-area: header;
-    border: 2px solid black;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 2fr;
@@ -45,30 +59,41 @@ header {
 
 .projects {
     grid-area: projects;
-    border: 2px solid black;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 10px repeat(3, 1fr);
-    font-size: 10px;
-    background-color: gray;
+    grid-template-rows: 5% repeat(3, 1fr);
+    background-color: var(--colourBG);
 }
 
 .textbox {
-    padding: 2% 2% 2% 5%;
-    margin: 5%;
-    border: 1px solid black;
+    padding: 5%;
+    margin: 3%;
     border-radius: 10px;
-    box-shadow: 2px 2px 3px grey;
-    box-shadow: inset 5px 0 0 0 var(--colour1);
+    box-shadow: 2px 2px 4px black;
+    border-left:8px solid var(--colourOrange);
     background-color: white;
+    display: grid;
+    font-size: 0.8rem;
 }
 
 .title {
     grid-column: 2 span;
+    align-self: end;
+    justify-self: start;
+    padding: 2% 0% 0% 3%;
+    font-size: 1rem;
 }
+
+.icons {
+    display: flex;
+    gap: 5px;
+    justify-self: end; 
+    align-self: end;
+}
+
 
 .rSide {
     grid-area: rSide;
-    border: 2px solid black;
+    background-color: var(--colourBG);
 }
 
