--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ nav {
 nav > div {
     color: white;
     padding: 0% 4%;
-    border: 2px solid white;
     font-size: 0.8rem;
     display: flex;
     justify-content: start; 
@@ -57,6 +56,40 @@ header {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 2fr;
+    grid-template-areas: 
+    "search profile"
+    "profile2 buttons";
+}
+
+.search {
+    grid-area: search;
+    /* border: 2px solid black;/ */
+}
+
+.profile {
+    grid-area: profile;
+    /* border: 2px solid black; */
+}
+
+.profile2 {
+    grid-area: profile2;
+    /* border: 2px solid black; */
+}
+
+.buttons {
+    display: flex;
+    grid-area: buttons;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+button {
+    background-color: var(--colourblue);
+    color: white;
+    font-size: 1em;
+    width: 7em;
+    height: 2em;
+    border-radius: 25px;
 }
 
 .projects {
@@ -89,6 +122,7 @@ header {
 .icons {
     display: flex;
     gap: 5px;
+    margin-top: 3%;
     justify-self: end; 
     align-self: end;
 }
