--- a/style.css
+++ b/style.css
@@ -1,135 +1,168 @@
 :root {
-    font-family: Arial, Helvetica, sans-serif;
-    --colour1: #F28123;
-    --colourblue: #38726C;
-    --colourwords: #8e9aaf;
-    --colourOrange: #d34324;
-    --colourBG: #DCEED1;
+  font-family: Arial, Helvetica, sans-serif;
+  --colour1: #f28123;
+  --colourblue: #38726c;
+  --colourwords: #8e9aaf;
+  --colourOrange: #d34324;
+  --colourBG: #dceed1;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    padding: 0;
-    margin: 0;
+  /* width: 100vw; */
+  /* height: 100%; */
+  padding: 0;
+  margin: 0;
 }
 
 .container {
-    margin: 0;
-    display: grid;
-    grid-template-columns: 1fr 4fr 2fr;
-    grid-template-rows: 1fr 2fr 2fr;
-    grid-template-areas: 
+  margin: 0;
+  display: grid;
+  grid-template-columns: 15% 1fr 20%;
+  grid-template-rows: 150px 1fr 1fr;
+  grid-template-areas:
     "nav header header"
     "nav projects rSide"
     "nav projects rSide";
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 nav {
-    grid-area: nav;
-    display: grid;
-    background-color: var(--colourblue);
-    grid-template-columns: 1fr;
-    grid-template-rows: 10% repeat(10, 8%);   
+  grid-area: nav;
+  display: grid;
+  background-color: var(--colourblue);
+  grid-template-columns: 1fr;
+  grid-template-rows: 60px repeat(10, 40px);
 }
 
 nav > div {
-    color: white;
-    padding: 0% 4%;
-    font-size: 0.8rem;
-    display: flex;
-    justify-content: start; 
-    align-items: center;
-    gap: 4%;
+  color: white;
+  padding: 0% 5%;
+  font-size: 0.8rem;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 4%;
 }
 
 #dashboard {
-    font-size: 1rem;
-    font-weight: bold;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
-
 header {
-    grid-area: header;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 2fr;
-    grid-template-areas: 
+  grid-area: header;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  grid-template-areas:
     "search profile"
     "profile2 buttons";
 }
 
 .search {
-    grid-area: search;
-    /* border: 2px solid black;/ */
+  grid-area: search;
+  /* border: 2px solid black;/ */
 }
 
 .profile {
-    grid-area: profile;
-    /* border: 2px solid black; */
+  grid-area: profile;
+  /* border: 2px solid black; */
 }
 
 .profile2 {
-    grid-area: profile2;
-    /* border: 2px solid black; */
+  grid-area: profile2;
+  /* border: 2px solid black; */
 }
 
 .buttons {
-    display: flex;
-    grid-area: buttons;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  grid-area: buttons;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 button {
-    background-color: var(--colourblue);
-    color: white;
-    font-size: 1em;
-    width: 7em;
-    height: 2em;
-    border-radius: 25px;
+  background-color: var(--colourblue);
+  color: white;
+  font-size: 1em;
+  width: 7em;
+  height: 2em;
+  border-radius: 25px;
+  border: none;
 }
 
 .projects {
-    grid-area: projects;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 5% repeat(3, 1fr);
-    background-color: var(--colourBG);
+  grid-area: projects;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 40px repeat(3, 200px);
+  background-color: var(--colourBG);
+  padding: 3% 0%;
 }
 
 .textbox {
-    padding: 5%;
-    margin: 3%;
-    border-radius: 10px;
-    box-shadow: 2px 2px 4px black;
-    border-left:8px solid var(--colourOrange);
-    background-color: white;
-    display: grid;
-    font-size: 0.8rem;
+  padding: 5%;
+  margin: 3%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 4px black;
+  border-left: 8px solid var(--colourOrange);
+  background-color: white;
+  display: grid;
+  font-size: 0.8rem;
 }
 
 .title {
-    grid-column: 2 span;
-    align-self: end;
-    justify-self: start;
-    padding: 2% 0% 0% 3%;
-    font-size: 1rem;
+  grid-column: 2 span;
+  align-self: end;
+  justify-self: start;
+  padding: 2% 0% 0% 3%;
+  font-size: 1rem;
 }
 
 .icons {
-    display: flex;
-    gap: 5px;
-    margin-top: 3%;
-    justify-self: end; 
-    align-self: end;
+  display: flex;
+  gap: 5px;
+  margin-top: 3%;
+  justify-self: end;
+  align-self: end;
 }
-
 
 .rSide {
-    grid-area: rSide;
-    background-color: var(--colourBG);
+  grid-area: rSide;
+  background-color: var(--colourBG);
+  padding: 10% 0%;
 }
 
+.rSide .title {
+  font-weight: bold;
+  margin-left: 3%;
+  margin-top: 5%;
+}
+
+.frame {
+  margin: 5%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 4px black;
+  background-color: white;
+  display: grid;
+  font-size: 0.8rem;
+}
+
+#framed {
+    padding: 5% 5% 0% 5%;
+}
+
+.announcements {
+    gap:0px;
+    padding: 0;
+    margin:0;
+}
+
+.trending {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding: 0;
+    justify-items: center;
+    align-items: center;
+}
