--- a/style.css
+++ b/style.css
@@ -62,24 +62,65 @@ header {
 
 .search {
   grid-area: search;
-  /* border: 2px solid black;/ */
+  display: block;
+  padding-left: 50px;
+  align-content: center;
+  justify-items: center;
+  gap: 15px;
 }
 
 .profile {
   grid-area: profile;
-  /* border: 2px solid black; */
+  font-weight: bold;
+  padding: 2% 5%;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 15px;
 }
 
 .profile2 {
   grid-area: profile2;
-  /* border: 2px solid black; */
+  display: grid;
+  grid-template-columns: 60px 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    "icon hi"
+    "icon name";
+  font-weight: bold;
+  padding: 1% 0% 0% 50px;
+  
+}
+
+.hi {
+  grid-area: hi;
+  font-size: 15px;
+  margin-top: 3px;
+
+}
+
+.icon {
+  grid-area: icon;
+}
+
+.name {
+  grid-area: name;
+  font-size: 20px;
+}
+
+input[type="text"] {
+  border: 1px solid black;
+  border-radius: 25px;
+  height: 2em;
+  width: 20rem;
+  padding-left: 5px;
 }
 
 .buttons {
   display: flex;
   grid-area: buttons;
   justify-content: space-evenly;
-  align-items: center;
+  padding-top: 5%;
 }
 
 button {
@@ -150,19 +191,19 @@ button {
 }
 
 #framed {
-    padding: 5% 5% 0% 5%;
+  padding: 5% 5% 0% 5%;
 }
 
 .announcements {
-    gap:0px;
-    padding: 0;
-    margin:0;
+  gap: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .trending {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    padding: 0;
-    justify-items: center;
-    align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  padding: 0;
+  justify-items: center;
+  align-items: center;
 }
